<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

    <item
        android:id="@+id/home_book"
        android:title="@string/home"/>
    <item
        android:id="@+id/added_books"
        android:title="@string/my_added_books"/>

    <item
        android:id="@+id/search"
        android:title="@string/search" />

    <item
        android:id="@+id/add_book"
        android:title="@string/add_book"/>

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/my_bookstore"
            android:title="My Bookstore" />

        <item
            android:id="@+id/register_bookstore"
            android:title="Register Bookstore"/>

    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/signOut"
            android:title="@string/sign_out"/>

    </group>
</menu>